--- a/app/pom.xml
+++ b/app/pom.xml
@@ -33,11 +33,11 @@
         <version>11.0.11</version>
     </dependency>
 
-    <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>1.2</version>
-    </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jcl-over-slf4j</artifactId>
+          <version>1.7.32</version>
+      </dependency>
 
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
@@ -50,6 +50,18 @@
         <artifactId>log4j-jcl</artifactId>
         <version>2.17.1</version>
     </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jul-to-slf4j</artifactId>
+          <version>1.7.32</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j-impl</artifactId>
+          <version>2.14.1</version>
+      </dependency>
 
   </dependencies>
   <build>
