--- a/app/pom.xml
+++ b/app/pom.xml
@@ -14,13 +14,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.13.4</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>ua.nure.kz</groupId>
       <artifactId>calc</artifactId>
       <version>1.0-SNAPSHOT</version>
@@ -31,18 +24,6 @@
         <groupId>org.apache.tomcat</groupId>
         <artifactId>tomcat-servlet-api</artifactId>
         <version>11.0.11</version>
-    </dependency>
-
-      <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>jcl-over-slf4j</artifactId>
-          <version>1.7.32</version>
-      </dependency>
-
-    <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
-        <version>2.17.1</version>
     </dependency>
 
     <dependency>
@@ -60,7 +41,7 @@
       <dependency>
           <groupId>org.apache.logging.log4j</groupId>
           <artifactId>log4j-slf4j-impl</artifactId>
-          <version>2.14.1</version>
+          <version>2.17.1</version>
       </dependency>
 
   </dependencies>
@@ -100,3 +81,35 @@
     </plugins>
   </build>
 </project>
+
+
+<!--
+Before:
+[INFO] ua.nure.kz:app:war:1.0-SNAPSHOT
+[INFO] +- org.junit.jupiter:junit-jupiter-api:jar:5.13.4:test
+[INFO] |  +- org.opentest4j:opentest4j:jar:1.3.0:test
+[INFO] |  +- org.junit.platform:junit-platform-commons:jar:1.13.4:test
+[INFO] |  \- org.apiguardian:apiguardian-api:jar:1.1.2:test
+[INFO] +- ua.nure.kz:calc:jar:1.0-SNAPSHOT:compile
+[INFO] +- org.apache.tomcat:tomcat-servlet-api:jar:11.0.11:compile
+[INFO] +- org.slf4j:jcl-over-slf4j:jar:1.7.32:compile
+[INFO] |  \- org.slf4j:slf4j-api:jar:1.7.32:compile
+[INFO] +- org.apache.logging.log4j:log4j-core:jar:2.17.1:compile
+[INFO] |  \- org.apache.logging.log4j:log4j-api:jar:2.17.1:compile
+[INFO] +- org.apache.logging.log4j:log4j-jcl:jar:2.17.1:compile
+[INFO] |  \- commons-logging:commons-logging:jar:1.2:compile
+[INFO] +- org.slf4j:jul-to-slf4j:jar:1.7.32:compile
+[INFO] \- org.apache.logging.log4j:log4j-slf4j-impl:jar:2.14.1:compile
+
+After:
+[INFO] ua.nure.kz:app:war:1.0-SNAPSHOT
+[INFO] +- ua.nure.kz:calc:jar:1.0-SNAPSHOT:compile
+[INFO] +- org.apache.tomcat:tomcat-servlet-api:jar:11.0.11:compile
+[INFO] +- org.apache.logging.log4j:log4j-jcl:jar:2.17.1:compile
+[INFO] |  +- commons-logging:commons-logging:jar:1.2:compile
+[INFO] |  \- org.apache.logging.log4j:log4j-api:jar:2.17.1:compile
+[INFO] +- org.slf4j:jul-to-slf4j:jar:1.7.32:compile
+[INFO] |  \- org.slf4j:slf4j-api:jar:1.7.32:compile
+[INFO] \- org.apache.logging.log4j:log4j-slf4j-impl:jar:2.17.1:compile
+[INFO]    \- org.apache.logging.log4j:log4j-core:jar:2.17.1:runtime
+-->
