--- a/app/pom.xml
+++ b/app/pom.xml
@@ -24,6 +24,7 @@
         <groupId>org.apache.tomcat</groupId>
         <artifactId>tomcat-servlet-api</artifactId>
         <version>11.0.11</version>
+        <scope>provided</scope>
     </dependency>
 
     <dependency>
