fix logging chains

--- a/app/src/main/webapp/WEB-INF/web.xml
+++ b/app/src/main/webapp/WEB-INF/web.xml
@@ -4,5 +4,5 @@
     xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
                         https://jakarta.ee/xml/ns/jakartaee/web-app_6_1.xsd"
     version="6.1">
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Kz Lb1</display-name>
 </web-app>
