--- a/app/pom.xml
+++ b/app/pom.xml
@@ -27,11 +27,12 @@
         <scope>provided</scope>
     </dependency>
 
-    <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-jcl</artifactId>
-        <version>2.17.1</version>
-    </dependency>
+      <!-- https://mvnrepository.com/artifact/org.slf4j/jcl-over-slf4j -->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jcl-over-slf4j</artifactId>
+          <version>1.7.32</version>
+      </dependency>
 
       <dependency>
           <groupId>org.slf4j</groupId>
@@ -44,7 +45,6 @@
           <artifactId>log4j-slf4j-impl</artifactId>
           <version>2.17.1</version>
       </dependency>
-
   </dependencies>
   <build>
     <finalName>app</finalName>
