--- a/app/pom.xml
+++ b/app/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>app</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>app Maven Webapp</name>
+  <name>Kz Lb1</name>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
